# routine-tracker-api

./: .coveragerc  .flake8  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: github-ci.yml
deploy/: dockerfile.migration  dockerfile.routine_tracker_api
src/: conftest.py
src/routine_tracker_core/: database.py  settings.py
src/routine_tracker_core/controllers/: __init__.py  authentication_controller.py  routine_controller.py
src/routine_tracker_core/domain/: __init__.py  constants.py  exceptions.py  utils.py
src/routine_tracker_core/domain/dtos/: authentication_dto.py  routine_dto.py
src/routine_tracker_core/domain/models/: __init__.py  frequency.py  historic.py  routine.py  tracker.py  user.py
src/routine_tracker_core/domain/requests/: auth_request.py  routine_request.py
src/routine_tracker_core/external_interfaces/routine_tracker_api/: __init__.py  dependencies.py  main.py
src/routine_tracker_core/interfaces/presenters/: __init__.py  base_presenter.py  routine_presenter.py
src/routine_tracker_core/interfaces/repositories/: __init__.py  user_repository.py  (+1 more)
src/routine_tracker_core/migrations/: env.py
src/routine_tracker_core/presenters/: __init__.py  authentication_presenter.py  base_presenter.py  routine_presenter.py
src/routine_tracker_core/repositories/: __init__.py  postgres_routine_repository.py  postgres_user_repository.py
src/routine_tracker_core/services/: __init__.py  google_oauth_service.py
src/routine_tracker_core/use_cases/: __init__.py  authentication.py  get_daily_routines.py
(+9 files in other folders)
